# llama.cpp

./: GGUFCHAT_VULKAN_QUICKSTART.md  GGUFChat_CMakeLists_VULKAN.txt  HEXAGON_NPU_GUIDE.md  QUICK_START_CN.md  SUMMARY.md  TODO_CHECKLIST.md  VULKAN_ANDROID_GUIDE.md  WINDOWS_SETUP_CN.md  build-hexagon-npu.sh  build_vulkan_android.ps1  build_vulkan_android.sh  build_vulkan_android_windows.sh  check_device.sh  check_my_vulkan.ps1  check_vulkan_setup.ps1  clean-all.ps1  copy_vulkan_libs.sh  copy_vulkan_to_ggufchat.ps1  deploy-hexagon-to-ggufchat.sh  deploy-htp-to-data-local.sh  nuclear-clean.ps1  nuclear-clean.sh  push-htp-libs.sh  立即执行.txt
GGUFChat/: AAR_API_CURRENT.md  AAR_使用指南.md  API_COMPARISON.md  COPY-LIBS-INSTRUCTIONS.md  NPU_STATUS.md  copy-official-libs.cmd  copy-official-libs.sh  gradle.properties  settings.gradle.kts
GGUFChat/app/: build.gradle.kts
GGUFChat/app/src/androidTest/java/com/stdemo/ggufchat/: ExampleInstrumentedTest.kt
GGUFChat/app/src/main/: AndroidManifest.xml
GGUFChat/app/src/main/cpp/: CMakeLists.txt  llama-android-jni-simple.cpp  llama-android-jni.cpp
GGUFChat/app/src/main/java/com/stdemo/ggufchat/: ChatPromptBuilder.kt  ChatViewModel.kt  HexagonHtpDeployer.kt  LlamaEngine.kt  MainActivity.kt  Message.kt  MessageAdapter.kt  ModelConfig.kt  ModelDownloader.kt  PersistentStorageHelper.kt
GGUFChat/app/src/main/jniLibs/: .gitignore  README.md
GGUFChat/app/src/main/res/layout/: activity_main.xml  dialog_download_progress.xml  dialog_model_selection.xml  item_message_assistant.xml  item_message_user.xml
GGUFChat/app/src/main/res/values/: strings.xml  styles.xml  themes.xml
GGUFChat/app/src/main/res/values-night/: themes.xml
GGUFChat/app/src/test/java/com/stdemo/ggufchat/: ExampleUnitTest.kt
GGUFChat/demo/: README.md  settings.gradle.kts
GGUFChat/demo/app/: build.gradle.kts
GGUFChat/demo/app/src/main/: AndroidManifest.xml
GGUFChat/demo/app/src/main/java/com/stdemo/ggufchat/: ModelManager.kt
GGUFChat/demo/app/src/main/java/com/stdemo/ggufchat/demo/: MainActivity.kt  MessageAdapter.kt
GGUFChat/demo/app/src/main/res/layout/: activity_main.xml  item_message_assistant.xml  item_message_user.xml
GGUFChat/demo/app/src/main/res/values/: strings.xml  themes.xml
GGUFChat/demo/app/src/main/res/values-night/: themes.xml
GGUFChat/demo/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
GGUFChat/gradle/wrapper/: gradle-wrapper.properties
GGUFChat/llama-android/: build.gradle.kts
GGUFChat/llama-android/src/main/: AndroidManifest.xml
GGUFChat/llama-android/src/main/cpp/: CMakeLists.txt  llama-android-jni.cpp
GGUFChat/llama-android/src/main/java/com/stdemo/ggufchat/: LlamaEngine.kt  ModelDownloader.kt
demo/: README.md
demo/archive/: FINAL_FIX_CN.md  FIX_NINJA_PATH_STEPS.md  INSTALL_VULKAN_SDK_WINDOWS.md  QUICK_FIX.md  VULKAN_WINDOWS_FIX.md  WINDOWS_VULKAN_ANDROID_FIX_CN.md
examples/llama.android/: gradle.properties
examples/llama.android/lib/: build.gradle.kts
examples/llama.android/lib/src/main/cpp/: CMakeLists.txt
ggml/src/ggml-vulkan/: CMakeLists.txt
ggml/src/ggml-vulkan/cmake/: host-toolchain.cmake.in
pkg-adb/llama.cpp/lib/cmake/ggml/: ggml-config.cmake
pkg-adb/llama.cpp/lib/cmake/llama/: llama-config.cmake  llama-version.cmake
pkg-adb/llama.cpp/lib/pkgconfig/: llama.pc
